# jarvis

./: .gitignore  Contributing.md  Jarvis.py  README.md  SETUP.md  putMarbles.cpp  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  enhancement-request.yml  project-request.yml
.github/workflows/: code-lint.yml
.streamlit/: secrets.example.toml
src/apps/auth/: auth.py  env.py
src/apps/pages/automations/Coding/: github.py
src/apps/pages/automations/Messenger/: EMail.py  whatsApp.py
src/apps/pages/automations/SocialMediaApps/: instagram.py
src/apps/pages/automations/Websites/: coronaVirus.py  google.py  horoscope.py  youtube.py
src/apps/pages/models/: healthCareModel.py  imageProcessingModel.py  objectDetectionModel.py  recommendationModel.py  utilityModel.py
src/apps/pages/models/ImageProcessing/: emotionRecognitionModel.py
src/apps/pages/models/ObjectDetection/: dogBreedClassifier.py
src/apps/pages/models/ObjectDetectionModels/: dogBreedClassifier.py
src/apps/pages/models/Recommendation/: movieRecommendationModel.py
src/apps/pages/models/RecommendationModels/: movieRecommendationModel.py
src/apps/pages/programs/: apiProgram.py  games.py  imageProgram.py  simpleProgram.py  studyProgram.py
src/apps/pages/programs/API/: chatWithYourPDF.py  (+9 more)
src/apps/public/: home.py  youtubePlaylist.py
src/auth/: auth.py  env.py
src/helpers/: camelToReadable.py  checkKeyExist.py  displayInstructions.py  getFolders.py  getModules.py  kaggle.py  structPages.py
src/utils/: functions.py  greeting.py
(+54 files in other folders)
